# generateAppearance

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  config.xml  datasetdataListInst2.0.txt  generateAppearance.files  generateAppearance.includes  gmon.out
models/: models.txt
models.2013.9.27/: models.txt  models.txt~
models.2013.9.27/ball/ball_1/: ball-1.obj.mtl
models.2013.9.27/ball/ball_2/: ball-2.obj.mtl
models.2013.9.27/ball/ball_3/: ball-3.obj.mtl
models.2013.9.27/lint_roller/lint_roller_1/: lint-roller-1.obj.mtl
models.2013.9.27/lint_roller/lint_roller_2/: lint-roller-0.obj.mtl
models.2013.9.27/lint_roller/lint_roller_3/: lint-roller-3.obj.mtl
models.2013.9.27/spray/spray_1/: spray-1.obj.mtl
models.2013.9.27/spray/spray_2/: spray-2.obj.mtl
models.2013.9.27/spray/spray_3/: spray-3.obj.mtl
models.2013.9.27/trash_box/trash_box _1/: trash-box-1-1.obj.mtl
models.2013.9.27/watering_pot/watering_pot_1/: watering-pot-1.obj.mtl
models.2013.9.27/watering_pot/watering_pot_2/: watering-pot-2.obj.mtl
models.2013.9.27/watering_pot/watering_pot_3/: watering-pot-3.obj.mtl
models/ornament/: test3.obj.mtl
models/spray/: spray.obj.mtl
models_old/clock/: clock3.obj.mtl
models_tsuchiya/: README.txt  models.txt
models_tsuchiya/ASKUL/: ASKUL.mtl
models_tsuchiya/nespresso/: nespresso.mtl
src/: #main.cpp#  CConfig.cpp  CConfig.h  CConfig.h~  CDataset.cpp  CDataset.cpp~  CDataset.h  CDataset.h~  CPatch.h  generateAppearance  globjloader.cpp  globjloader.h  learning.cpp  main.cpp  main.cpp~  util.cpp  util.cpp~  util.h
